--- a/src/globals.css
+++ b/src/globals.css
@@ -2,17 +2,20 @@
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 2;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
 }
 
 a {
@@ -20,35 +23,27 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
+p {
+	font-family: Inter, serif;
+}
+
 body {
+  padding: 0;
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  line-height: 1.1;
-}
-
 button {
-  border: 1px solid transparent;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
   cursor: pointer;
   transition: border-width 0.3s ease, transform 0.3s ease;
 }
 button:hover {
-  border-width: 5px;
-  transform: scale(1.05);
+  transform: scale(1.2);
   transition: all;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
